--- a/CIE3.ipynb
+++ b/CIE3.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNSQw+tT5TyJ938NISswQvf",
+      "authorship_tag": "ABX9TyPLJ2JOgq6jC/JezMguKAdL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.drop('origin',axis=1,inplace=True)\n",
+        "df.drop('horsepower',axis=1,inplace=True)\n",
         "df"
       ],
       "metadata": {
@@ -61,7 +61,7 @@
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
         "le=LabelEncoder()\n",
-        "df['name']=le.fit_transform(df['name'])\n",
+        "df['mpg']=le.fit_transform(df['mpg'])\n",
         "df"
       ],
       "metadata": {
@@ -85,7 +85,7 @@
       "cell_type": "code",
       "source": [
         "X=df.iloc[:,1:]\n",
-        "y=df.iloc[:,0]\n",
+        "y=df['mpg']\n",
         "X\n",
         "y"
       ],
